# Restudy-DRF-Tutorial

./: .gitignore  pyproject.toml
app/config/: settings.py  urls.py
app/members/: apis.py  urls.py
app/members/migrations/: 0001_initial.py
app/snippets/: admin.py  apis.py  models.py  serializers.py  tests.py  urls.py  views.py
app/snippets/apis/: api_view.py  generic.py  mixin.py  viewsets.py
app/snippets/migrations/: 0001_initial.py
